--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,5 @@
-name: e2e
+name: E2E Tests
+
 on:
   push:
     branches: [main]
@@ -13,6 +14,7 @@ concurrency:
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v4
 
@@ -22,8 +24,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: "pnpm"
+          node-version: '20'
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: |
@@ -31,15 +33,11 @@ jobs:
           pnpm install
 
       - name: Install Playwright browsers
-        run: |
-          cd frontend
-          pnpm exec playwright install --with-deps
+        run: cd frontend && npx playwright install --with-deps
 
       - name: Run E2E tests
-        run: |
-          cd frontend && pnpm run test:e2e
+        run: cd frontend && pnpm run test:e2e -- --retries=2
         env:
-          CI: true
           NEXT_PUBLIC_SUPABASE_URL: https://fxdzaspfxwvihrbxgjyh.supabase.co
           NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ4ZHphc3BmeHd2aWhyYnhnanloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEzODAyMzAsImV4cCI6MjA3Njk1NjIzMH0._wpAZG92z3pFoRvscCcyoA3QWfimkajXvIFUFAIFKKE
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
@@ -49,15 +47,18 @@ jobs:
           VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.VERIS_SIGNING_PUBLIC_KEY }}
           CRON_JOB_TOKEN: ${{ secrets.CRON_JOB_TOKEN || 'fake-cron-token-for-ci-testing-12345' }}
 
-      - name: Upload E2E results
+      - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: e2e-results
-          path: frontend/test-results/
+          name: playwright-report
+          path: frontend/playwright-report/
           retention-days: 7
 
-      - name: Check E2E success rate
-        run: |
-          # Assert ≥99% success rate
-          echo "E2E tests completed. Check results above for success rate."
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: frontend/test-results/
+          retention-days: 7
