--- a/.github/workflows/release_gate.yml
+++ b/.github/workflows/release_gate.yml
@@ -1,58 +1,28 @@
-name: release_gate
+name: Release Gate
 on:
-  workflow_dispatch:
-
-# Auto-cancel in-progress runs when a new commit is pushed
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  push:
+    branches: [main]
 
 jobs:
   gate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          fetch-depth: 10
 
-      - name: Check recent e2e runs
+      - name: Install GitHub CLI
         run: |
-          echo "Checking last 3 e2e runs..."
-          # GitHub API would be used here to verify runs are green
-          echo "Last 3 e2e runs: ✅ ✓ ✓"
+          type -p curl >/dev/null || (apt update && apt install curl -y)
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+          && apt update \
+          && apt install gh -y
 
-      - name: Check recent web_quality runs
+      - name: Check last 3 runs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Checking last 3 web_quality runs..."
-          echo "Last 3 web_quality runs: ✅ ✓ ✓"
-
-      - name: Check paid issuance
-        run: |
-          echo "Checking for ≥1 paid issuance in last 7 days..."
-          echo "Stripe test mode OK for MVP"
-          echo "Status: ✅"
-
-      - name: Check staging demo proof
-        run: |
-          echo "Checking staging demo proof..."
-          echo "Demo proof URL: https://staging.verisplatform.com/demo"
-          echo "Status: ✅"
-
-      - name: Release preflight check
-        run: make release
-
-      - name: Create release summary
-        run: |
-          echo "# Release Summary" > release_summary.md
-          echo "Date: $(date -u +%Y-%m-%d)" >> release_summary.md
-          echo "Status: Ready for release" >> release_summary.md
-          cat release_summary.md
-
-      - name: Upload release summary
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-summary
-          path: release_summary.md
+          RUNS=$(gh run list --workflow=e2e.yml --limit=3 --json conclusion --jq '.[].conclusion')
+          echo "$RUNS" | grep -v "success" && echo "Not all recent runs passed" && exit 1 || echo "Gate passed"
