--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:preview": "playwright test --config=playwright.config.preview.ts",
+    "test:a11y": "pa11y-ci",
     "seed:stripe": "tsx ../scripts/seed.stripe.ts",
     "release": "tsx ../scripts/release.ts",
     "mint:mock": "tsx scripts/mint-mock-proofs.ts",
@@ -43,6 +44,8 @@
     "ajv-formats": "^3.0.1",
     "arweave": "^1.15.7",
     "canonical-json": "^0.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "commander": "^14.0.1",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
@@ -59,6 +62,7 @@
     "stripe": "^19.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.29.5",
+    "tailwind-merge": "^3.3.1",
     "ulidx": "^2.4.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
@@ -66,6 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@jest/globals": "^29.7.0",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.12",
@@ -81,6 +86,7 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "node-mocks-http": "^1.17.2",
+    "pa11y-ci": "^4.0.1",
     "tailwindcss": "^4",
     "ts-jest": "^29.1.2",
     "tsx": "^4.19.2",
