--- a/.github/workflows/release_gate.yml
+++ b/.github/workflows/release_gate.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches: [main]
 
+# Auto-cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gate:
     runs-on: ubuntu-latest
