ci: correct viewport spec path and rely on config baseURL

--- a/.github/workflows/viewport_test.yml
+++ b/.github/workflows/viewport_test.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Run viewport tests
         run: |
           cd frontend
-          pnpm exec playwright test viewport.spec.ts --base-url=http://localhost:3000
+          pnpm exec playwright test e2e/viewport.spec.ts
         env:
           NEXT_PUBLIC_SUPABASE_URL: https://fxdzaspfxwvihrbxgjyh.supabase.co
           NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ4ZHphc3BmeHd2aWhyYnhnanloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEzODAyMzAsImV4cCI6MjA3Njk1NjIzMH0._wpAZG92z3pFoRvscCcyoA3QWfimkajXvIFUFAIFKKE
