--- a/frontend/env.example
+++ b/frontend/env.example
@@ -49,5 +49,18 @@ NEXTAUTH_URL=https://your-app.vercel.app
 NODE_ENV=development
 VERCEL_ENV=development
 
+# Email service (for sign-off notifications)
+RESEND_API_KEY=re_***
+SENDGRID_API_KEY=SG.***
+
+# Feature flags
+ENABLE_SIGNOFF_FLOW=true
+ENABLE_EVIDENCE_EXPORT=true
+ENABLE_C2PA_CHECK=false
+
+# Veris Platform Configuration
+VERIS_ISSUER=Veris Platform
+NEXT_PUBLIC_SITE_URL=https://your-app.vercel.app
+
 # Optional: Additional configuration
 # Add any additional environment variables your application needs
