docs: reorganize and archive documentation
- Archive outdated build plans to docs/archive/build-plans/
- Archive historical reports to docs/archive/reports/
- Move CHANGELOG to root (conventional location)
- Update docs/README.md with clear structure
- Clean up test artifacts from git
- Update .gitignore for test outputs

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -47,3 +47,10 @@ next-env.d.ts
 *.pem
 *.key
 .ed25519*
+
+# Test artifacts
+test-results/
+playwright-report/
+.playwright/
+lighthouse-*.html
+lighthouse-*.json
