--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "cd frontend && (npm ci --include=dev || npm install --include=dev)",
   "framework": "nextjs",
   "redirects": [
     {
