--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && pnpm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && (npm ci --include=dev || npm install --include=dev)",
+  "installCommand": "npm install -g pnpm && cd frontend && pnpm install --frozen-lockfile",
   "framework": "nextjs",
   "redirects": [
     {
