--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "buildCommand": "cd frontend && pnpm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "corepack enable && corepack prepare pnpm@10.18.1 --activate && pnpm install --frozen-lockfile",
+  "installCommand": "npm install -g pnpm@10.18.1 && pnpm install --frozen-lockfile",
   "framework": "nextjs",
   "redirects": [
     {
