fix(vercel): restore version field and ensure pnpm is available
- Restore version: 2 field (may be required)
- Add explicit installCommand to ensure pnpm is installed
- Keep Vercel env detection for relaxed validation

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+  "version": 2,
   "buildCommand": "cd frontend && pnpm run build",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
+  "installCommand": "npm install -g pnpm && pnpm install",
   "redirects": [
     {
       "source": "/(.*)",
