fix(vercel): skip env validation in Vercel builds
Bypass validate-env.ts entirely for Vercel builds by using 'next build' directly.
Environment variables are managed via Vercel dashboard, so validation step
is not needed and may be causing build failures.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && pnpm run build",
+  "buildCommand": "cd frontend && pnpm exec next build",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
   "installCommand": "npm install -g pnpm && pnpm install",
