fix(vercel): set rootDirectory for monorepo setup
Set rootDirectory to 'frontend' so Vercel treats it as the project root.
This simplifies the build command and ensures proper workspace resolution.
The validation script will still skip for Vercel deployments.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && pnpm exec next build",
-  "outputDirectory": "frontend/.next",
+  "buildCommand": "pnpm run build",
+  "rootDirectory": "frontend",
+  "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm install -g pnpm && pnpm install",
   "redirects": [
