fix(vercel): install dependencies from workspace root
When rootDirectory is 'frontend', Vercel runs commands from that directory.
Need to cd to workspace root (..) to install dependencies properly for pnpm workspace.

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "rootDirectory": "frontend",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install -g pnpm && pnpm install",
+  "installCommand": "npm install -g pnpm && cd .. && pnpm install",
   "redirects": [
     {
       "source": "/(.*)",
