fix(vercel): bypass validation script entirely in build command
Use 'next build' directly instead of 'pnpm run build' to completely skip
the validation script. The validation script already detects Vercel and
exits early, but this ensures there's no possibility of issues with tsx
or the validation script interfering with the build.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm exec next build",
   "rootDirectory": "frontend",
   "outputDirectory": ".next",
   "framework": "nextjs",
