fix(vercel): use Corepack for pnpm and enable lockfile support
- Enable Corepack in both install and build commands for proper pnpm recognition
- Install from workspace root to support monorepo setup
- Remove pnpm-lock.yaml from .vercelignore to enable --frozen-lockfile
- Simplify build command since rootDirectory is already set to frontend
- This addresses Vercel's pnpm monorepo detection issues

--- a/.vercelignore
+++ b/.vercelignore
@@ -44,8 +44,8 @@ CHANGELOG.md
 .env.development
 .env.test
 
-# Package manager lockfiles (Vercel will install from package.json)
-pnpm-lock.yaml
+# Package manager lockfiles - Keep pnpm-lock.yaml for monorepo support
+# pnpm-lock.yaml - NEEDED for frozen-lockfile installs
 yarn.lock
 package-lock.json
 
