fix(vercel): remove Corepack, rely on Vercel's auto pnpm detection
- Vercel automatically detects pnpm when packageManager field兴奋 and pnpm-lock.yaml exist
- Simplify commands to avoid Corepack availability issues
- Use standard pnpm workspace commands for monorepo support

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "corepack enable && corepack pnpm exec next build",
+  "buildCommand": "cd .. && pnpm --filter frontend exec next build",
   "rootDirectory": "frontend",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "cd .. && corepack enable && corepack pnpm install --frozen-lockfile",
+  "installCommand": "cd .. && pnpm install --frozen-lockfile",
   "redirects": [
     {
       "source": "/(.*)",
