fix(vercel): correct monorepo build commands
- Remove 'cd ..' which fails since Vercel runs from repo root
- Change to 'cd frontend' for build command
- Keep install at root (handles pnpm workspace)
- Update outputDirectory to frontend/.next

Fixes: ERR_PNPM_NO_PKG_MANIFEST error

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd .. && pnpm --filter frontend exec next build",
-  "outputDirectory": ".next",
+  "buildCommand": "cd frontend && pnpm exec next build",
+  "outputDirectory": "frontend/.next",
   "framework": "nextjs",
-  "installCommand": "cd .. && pnpm install --frozen-lockfile",
+  "installCommand": "pnpm install --frozen-lockfile",
   "redirects": [
     {
       "source": "/(.*)",
