fix(vercel): add build:vercel script that skips env validation
Vercel deployments fail because env vars aren't available during build.
Add SKIP_ENV_VALIDATION=1 flag to skip validation during build phase.
Env vars are still validated at runtime.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "tsx scripts/validate-env.ts && next build",
+    "build:vercel": "SKIP_ENV_VALIDATION=1 next build",
     "build:validate": "tsx scripts/validate-env.ts",
     "start": "next start",
     "lint": "eslint",
