fix(vercel): adjust paths for Root Directory=frontend
Build and output paths are now relative to frontend/ directory.
Requires Root Directory to be set to 'frontend' in dashboard.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd frontend && pnpm run build:vercel",
+  "buildCommand": "pnpm run build:vercel",
   "installCommand": "pnpm install",
-  "outputDirectory": "frontend/.next",
+  "outputDirectory": ".next",
   "redirects": [
     {
       "source": "/(.*)",
